# Cpp-OpenGL

./: CMakeLists.txt  README.md
include/common/: shader.hpp
src/: app.cpp  test.cpp
